--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Portafolio_ONG</title>
   </head>
   <body>
-    Omar
+    Omar Uriel
   </body>
 </html>
