cambio en 1 imagen

--- a/index.html
+++ b/index.html
@@ -84,18 +84,13 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="img/ouishare.png" alt="First slide">
+          <img class="first-slide" src="img/codeando.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-<<<<<<< HEAD
+
               <h1>ERES UNA ONG?</h1>
               <p>y QUIERES UN SITIO WEB? <code>file:// AQUI NO SE QUE VA</code> NOSOTROS TE AYUDAMOS</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">CONTACTANOS</a></p>
-=======
-              <h1>CASO DE EXITO.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
->>>>>>> 5ae2fd6a17cd1f605f89795626b0010aaf571336
             </div>
           </div>
         </div>
@@ -110,7 +105,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="img/corazon.jpg" alt="Third slide">
+          <img class="third-slide" src="img/chica.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>COMO FUNCIONA</h1>
